syntax = "proto3";

package com.proto;

option java_multiple_files = true;

message NotificationRequest
{
    int32 notificationId = 1;
}

message NotificationResponse
{
    int32 notificationId = 1;
    string studentName = 2;
}

service StudentNotificationService
{
   rpc getNotificationById(NotificationRequest) returns(NotificationResponse);
}
